# enterprise-document-intelligence

./: .gitignore
backend/: .env.example  Dockerfile  celery_worker.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py
backend/app/api/models/: __init__.py  request_models.py  response_models.py
backend/app/api/routes/: __init__.py  classification.py  dashboard.py  documents.py  extraction.py  fraud.py  health.py
backend/app/core/: __init__.py
backend/app/core/extraction/: __init__.py  contract_extractor.py  field_mapper.py  form_extractor.py  invoice_extractor.py
backend/app/core/fraud/: __init__.py  amount_anomaly.py  detector.py  rule_engine.py  signature_validator.py
backend/app/core/nlp/: __init__.py  bert_classifier.py  model_loader.py  ner_extractor.py  text_cleaner.py
backend/app/core/ocr/: __init__.py  gemini_engine.py  image_preprocessor.py  ocr_factory.py  tesseract_engine.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/database/models/: __init__.py  audit_log.py  document.py  extraction.py  fraud_log.py  user.py
backend/app/services/: __init__.py  cache_service.py  classification_service.py  document_service.py  erp_integration.py  extraction_service.py  fraud_service.py
backend/app/storage/: __init__.py  local_storage.py  s3_client.py  storage_factory.py
backend/app/utils/: __init__.py  decorators.py  exceptions.py  file_validator.py  helpers.py  logger.py
backend/app/workers/: __init__.py  batch_processor.py  celery_app.py  document_tasks.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_initial_migration.py  002_add_fraud_tables.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_documents.py  test_extraction.py  test_fraud.py
backend/tests/test_core/: test_bert.py  test_ner.py  test_ocr.py
backend/tests/test_services/: test_document_service.py  test_fraud_service.py
